syntax = "proto3";
package messages.preprocessing;



// Represents an ongoing preprocessing action.
message PreprocessStatusInfo {
  string preprocess_id = 1;  // ID of the preprocess job
  double runtime = 2;        // Time since start (seconds)
  string stage = 3; // Current stage
  string message = 4;        // Optional message
}

// The heartbeat message from a preprocessing worker.
message PreprocessHeartbeat {
  bool idle = 1;                       // Whether the worker is idle
  PreprocessStatusInfo status_info = 2; // Status update if not idle
  string instance_id = 3;              // Worker instance ID
  string timestamp = 4;                // When the heartbeat was sent
  string uuid = 5;                     // Unique ID to avoid duplicates
}
